# ribbit

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build-tools.sh  clean-results.sh  fpm.toml  run.cmd  run.sh
.github/workflows/: main.yml
inputs/: arnold.ribbit  beams.ribbit  bouncy-ball.ribbit  bouncy-balls.ribbit  bouncy-block.ribbit  bouncy-tet.ribbit  bouncy-tets-bug.ribbit  bouncy-tets.ribbit  cube.ribbit  cubes-vert.ribbit  cubes.ribbit  cylinder.ribbit  dice-slope.ribbit  die.ribbit  go.ribbit  homer.ribbit  many-dice.ribbit  orbit-bodies-3.ribbit  orbit-spheres.ribbit  space-cubes.ribbit  space-spheres.ribbit  space-tets.ribbit  sphere.ribbit  spheres.ribbit  sun-earth-moon.ribbit  sun-earth.ribbit  sun-mercury-venus-earth.ribbit  sun-venus-earth.ribbit  tet.stl  tets.ribbit
src/: main.f90  ribbit.f90  test.f90  utils.c  utils.f90
tools/conv/: CMakeLists.txt  main.cpp
tools/grav/: grav.sce
tools/tri-line/: math.md  tri-line.sci
